java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField4-hints.pass
Create Field test in org.netbeans.test.java.hints.CreateField4
